Code to test the CSV source on 2 stores